<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".buttons.ButtonActivity">

    <LinearLayout
        android:layout_width="@dimen/_300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/tv_check_box" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:gravity="center_horizontal"
            android:text="@string/tv_radio_button"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_16sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_radio_button_1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30dp"
                android:text="@string/tv_radio_button_2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30dp"
                android:text="@string/tv_radio_button_3" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_radio_button_4" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40dp"
                android:text="@string/tv_switch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_100dp"
                android:src="@drawable/ic_img_layer_list"
                tools:ignore="contentDescription" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginStart="@dimen/_40dp"
                android:onClick="onLevelImgClick"
                android:src="@drawable/ic_img_level_list"
                tools:ignore="contentDescription" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30dp"
            android:orientation="horizontal">

            <!-- design_fab_size_normal -->
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_img_layer_list"
                app:maxImageSize="@dimen/_60dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_30dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onLevelImgClick"
                android:src="@drawable/ic_img_level_list"
                app:backgroundTint="@color/colorBlue"
                app:fabSize="mini"
                app:maxImageSize="@dimen/_40dp"
                app:pressedTranslationZ="@dimen/_10dp"
                app:rippleColor="@color/colorGreen" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>